# Object-Tracking-TLD

./: CMakeLists.txt  LICENSE  README.md  params.yaml
src/: CascadeClassifier.cpp  CascadeClassifier.h  EnsembleClassifier.cpp  EnsembleClassifier.h  Main.cpp  MedianFlowTracker.cpp  MedianFlowTracker.h  ObjectModel.cpp  ObjectModel.h  Params.cpp  Params.h  TLD.cpp  TLD.h  Utils.cpp  Utils.h
